hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tshape.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function dyn(): dynamic { return darray[]; }

function f(): shape('a' => int) {
  return dyn(); // error
}
